# SwiftChat

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  debug_auth.js
.github/workflows/: build-verification.yml  ci.yml  code-quality.yml
docs/: API.md  API_COMPLETE.md  INDEX.md  README.md  database.md  database_manager_api.md  http_request_api.md  http_server.md  http_server_api.md  model.md  websocket_api.md
examples/: CMakeLists.txt  websocket_demo.cpp
scripts/: api_test.py  e2e_test.py  http_test.js  login.lua  websocket_test.js  wrk_test.sh
src/: CMakeLists.txt  chat_application.cpp  chat_application.hpp  main.cpp
src/chat/: message.cpp  message.hpp  room.cpp  user.cpp  user.hpp
src/db/: database_connection.cpp  database_connection.hpp  database_manager.cpp  database_manager.hpp  message_repository.cpp  message_repository.hpp  room_repository.cpp  room_repository.hpp  user_repository.cpp  user_repository.hpp
src/http/: epoller.cpp  epoller.hpp  http_request.cpp  http_request.hpp  http_response.cpp  http_response.hpp  http_server.cpp  http_server.hpp
src/middleware/: auth_middleware.cpp  auth_middleware.hpp
src/model/: message.cpp  message.hpp  room.hpp  user.cpp  user.hpp
src/service/: auth_service.cpp  auth_service.hpp  message_service.cpp  message_service.hpp  room_service.cpp  room_service.hpp  server_service.cpp  server_service.hpp  user_service.cpp  user_service.hpp  user_status_manager.cpp  user_status_manager.hpp
src/utils/: jwt_utils.cpp  jwt_utils.hpp  logger.cpp  logger.hpp  thread_pool.hpp  timer.cpp  timer.hpp
src/websocket/: websocket_server.cpp  websocket_server.hpp
static/: index.html  style.css  test.html
static/css/: styles.css
static/js/: app.js
tests/: CMakeLists.txt
tests/chat/: test_user.cpp
tests/db/: test_database_manager.cpp
tests/http/: test_http_request.cpp  test_http_response.cpp  test_http_server.cpp
tests/model/: test_message.cpp  test_room.cpp  test_user.cpp
tests/utils/: test_auth_utils.cpp  test_logger.cpp  test_thread_pool.cpp  test_timer.cpp
tests/websocket/: test_websocket_basic.cpp  test_websocket_server.cpp
